--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         }
     ],
     "minimum-stability" : "dev",
-    "prefer-stable" : true
+    "prefer-stable" : true,
+    "autoload": {
+        "files": ["logger.class.php"]
+    }
 }
